add fuana upload

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
 	%sapper.base%
 
 	<link rel='stylesheet' href='global.css'>
+	<link rel='stylesheet' href='https://unpkg.com/trim-css@0.0.6/dist/trim.min.css' />
 	<link rel='manifest' href='manifest.json' crossorigin='use-credentials'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 
@@ -23,7 +24,9 @@
 <body>
 	<!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
-	<div id='sapper'>%sapper.html%</div>
+	<div id="sapper">
+		%sapper.html%
+	</div>
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
